2005-10-04  David Hansen  <david.hansen@gmx.net>

	* nnrss.el (nnrss-request-article): Add support for the comments tag.
	(nnrss-check-group): Ditto.

2005-10-04  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-uu.el (mm-uu-verbatim-marks-extract, mm-uu-latex-extract):
	Rename x-gnus-verbatim to x-verbatim.
	(mm-uu-type-alist): Fix regexp for verbatim-marks.

	* mm-decode.el (mm-automatic-display): Rename x-gnus-verbatim to
	x-verbatim.

	* mm-url.el (mm-url-predefined-programs): Add switches for curl.

	* gnus-util.el (gnus-remove-duplicates): Remove.

	* nnmail.el (nnmail-article-group): Use mm-delete-duplicates
	instead of gnus-remove-duplicates.

	* message.el (message-remove-duplicates): Remove.
	(message-idna-to-ascii-rhs-1): Use mm-delete-duplicates instead of
	message-remove-duplicates.

	* mm-util.el (mm-delete-duplicates): Use `delete-dups' if
	available, else use implementation from `delete-dups'.

	* message.el (message-insert-expires): New function.
	(message-mode-map): Add key binding.
	(message-mode-field-menu): Add menu entry.
	(message-mode): Document it.
	(message-make-expires-date): Use `message-make-date'.

2005-10-04  Josh Huber  <huber@alum.wpi.edu>

	* message.el (message-make-expires-date): New function.

2005-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (list-installed-shadows): New entry.
	(install): Use it.
	(remove-installed-shadows): New entry.

	* dgnushack.el (dgnushack-default-load-path): New variable.
	(dgnushack-find-lisp-shadows): New function.
	(dgnushack-remove-lisp-shadows): New function.

2005-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (install-el-elc): New entry.
	(install): Use it so that .el files are necessarily installed.

2005-09-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* time-date.el: Autoload parse-time-string, XEmacs needs it.

2005-09-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-decode.el (mm-inline-media-tests): Check presence of the diff-mode